trading section added, incomplete

--- a/hedge_lords_ui/src/app/app.component.html
+++ b/hedge_lords_ui/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-settings class="w-1/4 h-screen fixed left-0 top-0"></app-settings>
+<div>
+  <app-settings class="w-1/4 h-screen fixed left-0 top-0"></app-settings>
+  <app-trading class="w-3/4 h-screen fixed right-0 top-0"></app-trading>
+</div>
