--- a/hedge_lords_ui/src/app/components/settings/settings.component.html
+++ b/hedge_lords_ui/src/app/components/settings/settings.component.html
@@ -40,10 +40,12 @@
         ></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
-      <button mat-fab extended class="mb-4">
-        <mat-icon>download</mat-icon>
-        Subscribe
-      </button>
+      <div class="w-full flex justify-end">
+        <button mat-fab extended class="mb-4">
+          <mat-icon>download</mat-icon>
+          Subscribe
+        </button>
+      </div>
     </mat-expansion-panel>
   </mat-accordion>
   <br />
@@ -56,10 +58,12 @@
         <mat-label>Lot Size</mat-label>
         <input matInput [value]="selectedLotSize" />
       </mat-form-field>
-      <button mat-fab extended class="mb-4">
-        <mat-icon>upload</mat-icon>
-        Execute Trade
-      </button>
+      <div class="w-full flex justify-end">
+        <button mat-fab extended class="mb-4">
+          <mat-icon>upload</mat-icon>
+          Execute Trade
+        </button>
+      </div>
     </mat-expansion-panel>
   </mat-accordion>
   <br />
@@ -68,14 +72,12 @@
       <mat-expansion-panel-header>
         <mat-panel-title> Analytics Settings </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-form-field class="w-full">
-        <mat-label>Lot Size</mat-label>
-        <input matInput [value]="selectedLotSize" />
-      </mat-form-field>
-      <button mat-fab extended class="mb-4">
-        <mat-icon>trending_up</mat-icon>
-        Analyze
-      </button>
+      <div class="w-full flex justify-end">
+        <button mat-fab extended class="mb-4">
+          <mat-icon>trending_up</mat-icon>
+          Run Monte Carlo Analysis
+        </button>
+      </div>
     </mat-expansion-panel>
   </mat-accordion>
 </div>
