--- a/hedge_lords_ui/src/app/components/trading/trading.component.html
+++ b/hedge_lords_ui/src/app/components/trading/trading.component.html
@@ -1,10 +1,12 @@
 <div class="trading-container h-full">
-  <mat-grid-list cols="2" class="h-screen" style="overflow-y: hidden">
+  <mat-grid-list cols="2" style="overflow-y: hidden">
     <mat-grid-tile>
       <h2 class="text-2xl">Payoff Diagram</h2>
     </mat-grid-tile>
     <mat-grid-tile><h2 class="text-2xl">Analytics</h2></mat-grid-tile>
-    <mat-grid-tile><h2 class="text-2xl">Options Contracts</h2></mat-grid-tile>
+    <mat-grid-tile>
+      <h2 class="text-2xl">Options Contracts</h2>
+    </mat-grid-tile>
     <mat-grid-tile><h2 class="text-2xl">Selected Contracts</h2></mat-grid-tile>
   </mat-grid-list>
 </div>
