--- a/hedge_lords_ui/src/app/components/options-chain/options-chain.component.html
+++ b/hedge_lords_ui/src/app/components/options-chain/options-chain.component.html
@@ -1,1 +1,65 @@
-<div class="options-chain"></div>
+<div class="options-chain">
+  <div class="overflow-x-auto">
+    <table mat-table [dataSource]="dataSource" matSort class="w-full">
+      <!-- Put Side Columns -->
+      <ng-container matColumnDef="putBid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Bid</th>
+        <td mat-cell *matCellDef="let row">
+          <span [class.text-green-500]="row.contract_type === 'put_options'">
+            {{ row.contract_type === "put_options" ? row.best_bid : "" }}
+          </span>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="putAsk">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ask</th>
+        <td mat-cell *matCellDef="let row">
+          <span [class.text-red-500]="row.contract_type === 'put_options'">
+            {{ row.contract_type === "put_options" ? row.best_ask : "" }}
+          </span>
+        </td>
+      </ng-container>
+
+      <!-- Strike Price Column -->
+      <ng-container matColumnDef="strike">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="bg-gray-800"
+        >
+          Strike
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          class="bg-gray-800 text-center font-bold"
+        >
+          {{ row.strike_price }}
+        </td>
+      </ng-container>
+
+      <!-- Call Side Columns -->
+      <ng-container matColumnDef="callBid">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Bid</th>
+        <td mat-cell *matCellDef="let row">
+          <span [class.text-green-500]="row.contract_type === 'call_options'">
+            {{ row.contract_type === "call_options" ? row.best_bid : "" }}
+          </span>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="callAsk">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ask</th>
+        <td mat-cell *matCellDef="let row">
+          <span [class.text-red-500]="row.contract_type === 'call_options'">
+            {{ row.contract_type === "call_options" ? row.best_ask : "" }}
+          </span>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+</div>
