--- a/hedge_lords_ui/src/app/components/trading/trading.component.html
+++ b/hedge_lords_ui/src/app/components/trading/trading.component.html
@@ -5,7 +5,7 @@
     </mat-grid-tile>
     <mat-grid-tile><h2 class="text-2xl">Analytics</h2></mat-grid-tile>
     <mat-grid-tile>
-      <h2 class="text-2xl">Options Contracts</h2>
+      <app-options-chain></app-options-chain>
     </mat-grid-tile>
     <mat-grid-tile><h2 class="text-2xl">Selected Contracts</h2></mat-grid-tile>
   </mat-grid-list>
