--- a/hedge_lords_ui/src/app/app.component.html
+++ b/hedge_lords_ui/src/app/app.component.html
@@ -1,4 +1,13 @@
-<div>
-  <app-settings class="w-1/4 h-screen fixed left-0 top-0"></app-settings>
-  <app-trading class="w-3/4 h-screen fixed right-0 top-0"></app-trading>
+<div class="app-container">
+  <div class="sidebar" [class.open]="sidebarOpen">
+    <app-settings></app-settings>
+  </div>
+  
+  <div class="sidebar-toggle" (click)="toggleSidebar()">
+    <mat-icon>{{ sidebarOpen ? 'chevron_left' : 'menu' }}</mat-icon>
+  </div>
+  
+  <div class="main-content" [class.sidebar-open]="sidebarOpen">
+    <app-trading></app-trading>
+  </div>
 </div>
