--- a/hedge_lords_ui/src/app/components/trading/trading.component.html
+++ b/hedge_lords_ui/src/app/components/trading/trading.component.html
@@ -1,21 +1,22 @@
-<!-- <div class="trading-container h-full">
-  <app-options-chain></app-options-chain>
-</div> -->
-
-<div class="grid grid-cols-2 grid-rows-2 h-screen">
-  <div class="bg-red-200 p-4">
-    <h2 class="text-2xl font-bold">Quadrant 1</h2>
-    <p>Content for the first quadrant.</p>
-  </div>
-  <div class="bg-blue-200 p-4">
-    <h2 class="text-2xl font-bold">Quadrant 2</h2>
-    <p>Content for the second quadrant.</p>
-  </div>
-  <div class="p-4">
-    <app-options-chain></app-options-chain>
-  </div>
-  <div class="bg-yellow-200 p-4">
-    <h2 class="text-2xl font-bold">Quadrant 4</h2>
-    <p>Content for the fourth quadrant.</p>
+<div class="trading-container">
+  <h1 class="text-3xl pb-4">Options Strategy Trader</h1>
+  
+  <div class="grid grid-cols-2 grid-rows-2 gap-4 h-full">
+    <div class="bg-gray-100 p-4 rounded-md shadow-sm">
+      <h2 class="text-xl font-bold">Market Overview</h2>
+      <!-- Content for the first quadrant -->
+    </div>
+    <div class="bg-gray-100 p-4 rounded-md shadow-sm">
+      <h2 class="text-xl font-bold">Strategy Builder</h2>
+      <!-- Content for the second quadrant -->
+    </div>
+    <div class="p-4 overflow-hidden bg-white rounded-md shadow-sm">
+      <h2 class="text-xl font-bold mb-2">Options Chain</h2>
+      <app-options-chain></app-options-chain>
+    </div>
+    <div class="bg-gray-100 p-4 rounded-md shadow-sm">
+      <h2 class="text-xl font-bold">Position Analysis</h2>
+      <!-- Content for the fourth quadrant -->
+    </div>
   </div>
 </div>
