--- a/hedge_lords_ui/src/app/app.component.scss
+++ b/hedge_lords_ui/src/app/app.component.scss
@@ -18,6 +18,7 @@
   justify-content: center;
   cursor: pointer;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+//   margin-right: 1rem;
 }
 
 .sidebar {
