--- a/hedge_lords_ui/src/app/components/options-chain/options-chain.component.html
+++ b/hedge_lords_ui/src/app/components/options-chain/options-chain.component.html
@@ -30,12 +30,24 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let option of optionsData">
-          <td class="text-green-700">{{ option.call?.best_bid ?? '-' }}</td>
-          <td class="text-red-500">{{ option.call?.best_ask ?? '-' }}</td>
-          <td class="border-x font-bold">{{ option.call?.strike_price ?? option.put?.strike_price ?? '-' }}</td>
-          <td class="text-green-700">{{ option.put?.best_bid ?? '-' }}</td>
-          <td class="text-red-500">{{ option.put?.best_ask ?? '-' }}</td>
+        <tr *ngFor="let option of optionsData" class="option-row">
+          <td class="text-green-700 selectable" (click)="selectOption(option.call, 'call')" [class.has-data]="option.call">
+            {{ option.call?.best_bid ?? '-' }}
+          </td>
+          <td class="text-red-500 selectable" (click)="selectOption(option.call, 'call')" [class.has-data]="option.call">
+            {{ option.call?.best_ask ?? '-' }}
+          </td>
+          <td class="border-x font-bold selectable" 
+              (click)="selectStrikePrice(option)"
+              [class.has-data]="option.call || option.put">
+            {{ option.call?.strike_price ?? option.put?.strike_price ?? '-' }}
+          </td>
+          <td class="text-green-700 selectable" (click)="selectOption(option.put, 'put')" [class.has-data]="option.put">
+            {{ option.put?.best_bid ?? '-' }}
+          </td>
+          <td class="text-red-500 selectable" (click)="selectOption(option.put, 'put')" [class.has-data]="option.put">
+            {{ option.put?.best_ask ?? '-' }}
+          </td>
         </tr>
       </tbody>
     </table>
