--- a/hedge_lords_ui/src/app/components/options-chain/options-chain.component.scss
+++ b/hedge_lords_ui/src/app/components/options-chain/options-chain.component.scss
@@ -79,3 +79,16 @@ tbody tr:hover {
 .text-blue-600 {
   color: #1976d2;
 }
+
+.selectable {
+  cursor: pointer;
+  
+  &.has-data:hover {
+    background-color: rgba(52, 219, 80, 0.1);
+    font-weight: bold;
+  }
+}
+
+.option-row:hover {
+  background-color: rgba(0, 0, 0, 0.03);
+}
