--- a/hedge_lords_ui/src/app/components/trading/trading.component.scss
+++ b/hedge_lords_ui/src/app/components/trading/trading.component.scss
@@ -2,8 +2,21 @@
   height: 100%;
 }
 
+.app-title {
+  font-size: 2.25rem;
+  font-weight: 700;
+  color: #2e4a06;
+  margin-bottom: 1.5rem;
+  margin-left: 2rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 3px solid #34db50;
+  display: inline-block;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
 .grid {
-  height: calc(100% - 4rem);
+  height: calc(100% - 5rem);
 }
 
 app-options-chain {
