--- a/hedge_lords_ui/src/app/components/position-analysis/position-analysis.component.scss
+++ b/hedge_lords_ui/src/app/components/position-analysis/position-analysis.component.scss
@@ -12,6 +12,13 @@
   margin-bottom: 0.75rem;
 }
 
+.update-info {
+  font-size: 0.75rem;
+  color: #666;
+  margin-right: auto;
+  margin-left: 1rem;
+}
+
 .empty-state {
   display: flex;
   align-items: center;
