--- a/hedge_lords_ui/src/app/components/trading/trading.component.scss
+++ b/hedge_lords_ui/src/app/components/trading/trading.component.scss
@@ -49,3 +49,9 @@ h2 {
 .rounded-md {
   border-radius: 8px;
 }
+
+.chart-wrapper {
+  height: calc(100% - 2.5rem);
+  width: 100%;
+  margin-top: 0.5rem;
+}
