--- a/hedge_lords_ui/src/app/components/position-analysis/position-analysis.component.html
+++ b/hedge_lords_ui/src/app/components/position-analysis/position-analysis.component.html
@@ -42,7 +42,7 @@
           </label>
         </div>
         
-        <button mat-icon-button color="warn" class="remove-btn" (click)="removePosition(position.id)">
+        <button mat-icon-button color="warn" class="remove-btn" (click)="removePosition(position)">
           <mat-icon>close</mat-icon>
         </button>
       </div>
