--- a/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
+++ b/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
@@ -1,8 +1,16 @@
-<div class="chart-container">
-  <canvas
-    baseChart
-    [data]="chartData"
-    [options]="chartOptions"
-  >
-  </canvas>
+<div class="data-display">
+  <h3>Payoff Data Size:</h3>
+  <div class="data-info">
+    <p>Number of X points: {{ xDataSize }}</p>
+    <p>Number of Y points: {{ yDataSize }}</p>
+  </div>
+  <button class="refresh-button" (click)="refreshData()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M21 2v6h-6"></path>
+      <path d="M3 12a9 9 0 0 1 15-6.7L21 8"></path>
+      <path d="M3 22v-6h6"></path>
+      <path d="M21 12a9 9 0 0 1-15 6.7L3 16"></path>
+    </svg>
+    Refresh
+  </button>
 </div>
