--- a/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
+++ b/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
@@ -1,30 +1,25 @@
 <div class="data-display">
-  <h3>Payoff Data Size:</h3>
-  <div class="data-info">
-    <p>Number of X points: {{ xDataSize }}</p>
-    <p>Number of Y points: {{ yDataSize }}</p>
-    <p class="connection-status" [ngClass]="{'connected': isConnected, 'disconnected': !isConnected}">
-      Status: {{ isConnected ? 'Connected' : 'Disconnected' }}
-    </p>
+  <h3>Options Payoff Chart</h3>
+
+  <div class="chart-container">
+    <apx-chart
+      *ngIf="chartOptions.series"
+      [series]="chartOptions.series"
+      [chart]="chartOptions.chart"
+      [xaxis]="chartOptions.xaxis"
+      [yaxis]="chartOptions.yaxis"
+      [title]="chartOptions.title"
+      [stroke]="chartOptions.stroke"
+      [dataLabels]="chartOptions.dataLabels"
+    ></apx-chart>
   </div>
-  
+
   <div class="button-group">
     <button class="connect-button" (click)="connectWebSocket()" [disabled]="isConnected">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M5 12s2-3 6-3 6 3 6 3"></path>
-        <path d="M8 15s1-2 4-2 4 2 4 2"></path>
-        <line x1="12" y1="19" x2="12" y2="19"></line>
-      </svg>
       Connect
     </button>
-    
+
     <button class="refresh-button" (click)="refreshData()" [disabled]="!isConnected">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M21 2v6h-6"></path>
-        <path d="M3 12a9 9 0 0 1 15-6.7L21 8"></path>
-        <path d="M3 22v-6h6"></path>
-        <path d="M21 12a9 9 0 0 1-15 6.7L3 16"></path>
-      </svg>
       Refresh
     </button>
   </div>
