--- a/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
+++ b/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
@@ -1,5 +1,4 @@
 <div class="data-display">
-  <h3>Options Payoff Chart</h3>
 
   <div class="chart-container">
     <apx-chart
@@ -11,6 +10,8 @@
       [title]="chartOptions.title"
       [stroke]="chartOptions.stroke"
       [dataLabels]="chartOptions.dataLabels"
+      [annotations]="chartOptions.annotations"
+
     ></apx-chart>
   </div>
 
