--- a/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
+++ b/hedge_lords_ui/src/app/components/straddle-chart/straddle-chart.component.html
@@ -16,11 +16,8 @@
   </div>
 
   <div class="button-group">
-    <button class="connect-button" (click)="connectWebSocket()" [disabled]="isConnected">
-      Connect
-    </button>
-
-    <button class="refresh-button" (click)="refreshData()" [disabled]="!isConnected">
+  
+    <button class="refresh-button" (click)="refreshData()">
       Refresh
     </button>
   </div>
