new c=dummy calls added

--- a/hedge_lords_ui/src/app/app.component.html
+++ b/hedge_lords_ui/src/app/app.component.html
@@ -8,6 +8,8 @@
   </div>
   
   <div class="main-content" [class.sidebar-open]="sidebarOpen">
-    <app-trading></app-trading>
+    <div class="content-container">
+      <app-trading></app-trading>
+    </div>
   </div>
 </div>
